# CROW-OSINT

./: .pre-commit-config.yaml  README.md  crow__app.py  pyproject.toml  report.json  whois.json
crow/: banners.py  cli.py  completion.py  crow__app.py  datastore.py  external.py  scripting.py
crow/CLI/: __init__.py  __main__.py  commands.py  console.py  main.py
crow/core/: __init__.py  bases.py  config.py  logger.py  models.py  plugin_loader.py
crow/plugins/active_bhp/: __init__.py  plugin.py  plugin.py.bak
crow/plugins/active_pingtrace/: __init__.py  plugin.py
crow/plugins/active_robots/: __init__.py  plugin.py
crow/plugins/passive_dns/: __init__.py  plugin.py
crow/plugins/passive_email/: __init__.py  plugin.py  requirements.txt
crow/plugins/passive_email/plugins/: __init__.py  advanced_search.py  base.py  bing_search.py  duckduckgo_search.py  google_search.py  local_html.py  local_list.py  site_crawl.py
crow/plugins/passive_social/:   __init__.py  __init__.py  plugin.py  requirements.txt
crow/plugins/passive_social/plugins/: __init__.py  base.py  guess_module.py  search_bing_module.py  search_ddg_module.py  sherlock_module.py  site_extract_module.py
crow/plugins/passive_social/resources/: data.json
crow/plugins/passive_subdomain/: __init__.py  plugin.py
crow/plugins/passive_whois/: __init__.py  plugin.py  requirements.txt
docs/uml/: 4_2_context_level0.puml  4_2_context_level1.puml  4_2_context_level2_auto.puml  4_2_context_level2_manual.puml  4_3_usecase.puml  4_4_dfd_level0.puml  4_4_dfd_level1.puml  4_4_dfd_level2_auto.puml  4_4_dfd_level2_manual.puml
reports/: index.html
reports/auto/: report.html  report.json
reports/manual/: bhp.html  bhp.json  dns.html  dns.json  social.html  social.json  subdomain.html  subdomain.json  whois.html  whois.json
